--- a/resurse/css/general.css
+++ b/resurse/css/general.css
@@ -494,15 +494,15 @@
   }
   
   
- math.B {
+ .B {
     color: red;
   }
   
- math.M {
+ .M {
     color: green;
   }
   
- math.S {
+ .S {
     color: blue;
   }
   
