--- a/views/fragmente/head.ejs
+++ b/views/fragmente/head.ejs
@@ -30,3 +30,4 @@
   rel="stylesheet"
 />
 <link rel="stylesheet" type="text/css" href="./resurse/css/general.css" />
+<link rel="stylesheet" type="text/css" href="./resurse/css/nav.css" />
