--- a/resurse/css/general.css
+++ b/resurse/css/general.css
@@ -1,5 +1,5 @@
 
-
+/* resetare css */
 *{
     margin: 0;
     padding: 0;
@@ -20,6 +20,8 @@
     --culoare-secundara-3: #c9f5b5; 
     --culoare-secundara-4: #e51700;
     --culoare-secundara-5: #000000; 
+    --culoare-secundara-6: #2193b0;
+    --culoare-secundara-7: white;
     --spatiere-pagina: 100px;
     --spatiere-pagina-medie: 80px;
     --spatiere-pagina-mica: 50px;
@@ -28,6 +30,7 @@
     --grid-gap: 10px;
     --grid-gap-medium: 8px;
     --grid-gap-small: 5px;
+    --spacing-lg: calc(var(--spacing-unit) * 6);
     --image_video-width: 500px;
     --spatiu_celule_tabel: 3px;
     --border_radius_zone: 10px;
@@ -52,6 +55,7 @@
     padding: var(--text-padding);
     text-align: center;
     font-size: 24px;
+    margin-bottom: 30px;
     font-weight: bold;
     border-bottom: 3px solid var(--primary-color); 
     width: 100%;
@@ -74,26 +78,19 @@
 
 
   .zona2 a{
-    color: #000000
+    color: var(--culoare-secundara-5);
   }
 
   .footer a{
-    color:#000000
+    color:var(--culoare-secundara-5);
   }
 
-
-
-
-
-
-
-
-
-  
 footer {
+  margin-top: 50px;
+  box-shadow: 0 -5px 10px rgba(0, 0, 0, 0.3); /* umbră deasupra footerului */
   text-align: center;
   padding: 15px;
-  background-color: var(--primary-color); 
+  background-color: var(--background-color); 
   color: var(--text-color);
 }
   
@@ -137,11 +134,14 @@ footer {
   .banner {
     width: 70%;
     height: 100%;
+    
   }
   
   .banner-img {
+    min-width: 200px;
     width: 100%;
-    height: 100%;
+    max-width: 100%;
+    height: auto;
     object-fit: cover;
   }
   
@@ -175,7 +175,7 @@ footer {
   .search-bar {
     padding: 12px 30px;
     background-color: var(--highlight-color);
-    color: white;
+    color: var(--culoare-secundara-7);
     border: none;
     border-radius: 15px;
     font-family: 'Sriracha';
@@ -191,7 +191,7 @@ footer {
   }
 
   .search a {
-    color:#000000;
+    color:var(--culoare-secundara-5);
   }
   
   .zona2{
@@ -214,6 +214,7 @@ footer {
     width: 100%;
     min-width: 600px;
     border-spacing: var(--spatiu_celule_tabel) var(--spatiu_celule_tabel);
+    border: inset 5px var(--border-color);
   }
   
   th, td {
@@ -234,12 +235,13 @@ footer {
   }
   
   .table-body tr:nth-child(odd) {
-    background-color: white;
+    background-color: var(--culoare-secundara-7);
   }
   
   .table-body tr:hover td{
     background-color: var(--success-color );
-    transition: 1s;
+    transition: 0.5s;
+    
   }
   
   td[rowspan] {
@@ -248,13 +250,12 @@ footer {
   
   
   .zona8 {
-    display: flex;
     align-items: center;
-    justify-content: center;
     height: auto;
     width: 100%;
   }
-  
+
+
   .text-anunt-container {
     width: 40%;
     display: flex;
@@ -277,53 +278,60 @@ footer {
     margin-left: 20px;
     margin-right: 20px;
   }
-  
+  /* Videoclip pagina */
   .container-video {
-    width: 60%;
+    width: 100%; /* Lățime completă ca să poți centra pe toată pagina */
     display: flex;
     flex-direction: column;
-    align-items: center;
-  }
-  
-  .container-iframe {
+    align-items: center; /* Centrează conținutul pe orizontală */
+    justify-content: center; /* Centrează și pe verticală dacă vrei */
+    margin-top: 20px;
+    
+}
+
+.container-iframe {
     width: 100%;
-    max-width: 500px;
+    max-width: 500px; /* Limita maximă a containerului video */
     border: 5px solid var(--primary-color);
     text-align: center;
     display: flex;
     flex-direction: column;
     align-items: center;
     overflow: hidden;
-    margin-top: 10px;
-  }
-  
-  iframe {
+    margin: 0 auto; /* Centrare orizontală */
+    margin-bottom: 20px;
+}
+
+iframe {
     width: 100%;
-    height: 250px;
-  }
-  
-  .taburi-iframe {
+    height: auto;
+    aspect-ratio: 16 / 9; /* Păstrează proporția video-ului */
+}
+
+.taburi-iframe {
     display: flex;
     justify-content: center;
     gap: 50px;
     margin-bottom: 10px;
-  }
-  
-  .taburi-iframe a {
-    background: linear-gradient(to bottom, var(--primary-color), #2193b0);
+}
+
+.taburi-iframe a {
+    background: linear-gradient(to bottom, var(--primary-color), var(--culoare-secundara-6));
     border-bottom-right-radius: 10px;
     border-bottom-left-radius: 10px;
     padding: 5px 10px;
     color: var(--success-color);
     font-size: 20px;
-  }
-  
-  .taburi-iframe a:hover {
+    text-decoration: none;
+}
+
+.taburi-iframe a:hover {
     transition: background-color 500ms;
-    background: linear-gradient(to bottom, #2193b0, var(--primary-color));
-  }
+    background: linear-gradient(to bottom, var(--culoare-secundara-6), var(--primary-color));
+}
+
   
-  
+  /* Buton inceputul paginii */
   .back-to-top {
     position: fixed;
     bottom: 10px;
@@ -336,13 +344,13 @@ footer {
     justify-content: center;
     font-size: 50px;
     border-radius: 20px 20px 0 0;
-    opacity: 0.2;
+    opacity: 0.75;
     transition: background-color 500ms, transform 500ms, opacity 300ms;
   }
   .back-to-top:hover {  
     background-color: var(--primary-color);
     transform: rotate(0deg) scale(1.1);
-    opacity: 0.7;
+    opacity: 1;
     cursor: pointer;
   }
   
@@ -359,8 +367,8 @@ footer {
     position: absolute;
     bottom: 30px;
     left: -150px;
-    background-color: black;
-    color: white;
+    background-color: var(--culoare-secundara-5);
+    color: var(--culoare-secundara-7);
     padding: 5px 10px;
     border-radius: 5px;
     font-size: 12px;
@@ -373,6 +381,21 @@ footer {
     opacity: 1;
   }
   
+.container-harta {
+    width: 100%;
+    margin: auto;
+    overflow: hidden;
+}
+
+.container-harta iframe {
+    width: 100%;
+    height: 400px; /* cât vrei să fie harta */
+    border: 0;
+}
+
+
+
+
   /*bonus2*/
   .bonus2 {
     max-width: 600px;
@@ -423,7 +446,7 @@ footer {
   }
   
   
-   
+  /* ecran mediu */
   
   @media (max-width: 1024px){
     .container {
@@ -442,10 +465,16 @@ footer {
     }
   
     .zona1 {
-      flex-direction: column;
-      height: auto;
-      align-items: center;
+      display: flex;
+    justify-content: center; /* Centrare pe orizontală */
+    align-items: center; /* Centrare pe verticală */
+    min-height: 550px;
+    overflow: hidden;
+    padding: 15px;
+    z-index: 1;
+    border-radius: 20px;
     }
+
   
     .banner {
       width: 100%;
@@ -485,10 +514,8 @@ footer {
     }
   }
   
-  
-  
-  
-  
+
+/* ecran mic */
   @media (max-width: 768px) {
     .container {
       grid-template-columns: 1fr;
@@ -568,7 +595,9 @@ footer {
       font-size: 0.8em;
     }
   }
-  
+
+  /* stilizare pentru printarea paginii */
+
   @media print {
     #banner {
         position: fixed;
@@ -639,3 +668,81 @@ footer {
         margin-right: 2.5cm;
     }
 }
+
+.container {
+    margin-left: auto !important;
+    margin-right: auto !important;
+    max-width: 1600px !important;
+}
+
+
+/*hr-etapa5*/
+
+.linie-separatoare {
+    width: 80%;
+    height: 20px;
+    margin: 30px auto;
+    border: none;
+    background: radial-gradient(circle, var(--culoare-secundara-7), transparent 70%);
+    box-shadow: 0 0 10px 5px var(--primary-color);
+    position: relative;
+}
+
+.linie-separatoare::after {
+    content: "";
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 40px;
+    height: 40px;
+    background: url('/resurse/imagini/masini/hr.jpg') no-repeat center;
+    background-size: contain;
+}
+
+/* night/day button*/
+
+:root {
+    --bg-color: white;
+    --text-color: black;
+}
+
+body {
+    background-color: var(--bg-color);
+    color: var(--text-color);
+    transition: background-color 0.3s, color 0.3s;
+}
+
+body.dark-mode {
+    --bg-color: #121212;
+    --text-color: white;
+}
+
+#theme-toggle {
+    background: none;
+    border: none;
+    font-size: 24px;
+    cursor: pointer;
+}
+
+#theme-toggle i {
+    transition: transform 0.3s;
+}
+
+#theme-toggle:hover i {
+    transform: scale(1.2);
+}
+
+/*oferta*/
+
+/* Timer normal */
+#timer {
+    color: black;
+}
+
+/* Timer galben în ultimele 10 secunde */
+#timer.final-countdown {
+    color: var(--culoare-secundara-2);
+    transition: color 0.5s ease;
+}
+
