--- a/views/fragmente/footer.ejs
+++ b/views/fragmente/footer.ejs
@@ -1,5 +1,15 @@
 <footer>
-  <p><a href="#">Home</a></p>
+  <!-- Alte scripturi -->
+<script src="/resurse/js/comparare.js"></script>
+
+<!-- Container comparare -->
+<div id="container-comparare">
+  <p>Produse selectate pentru comparare:</p>
+  <ul id="lista-comparare"></ul>
+</div>
+
+
+  <p><a href="/">Home</a></p>
   <address id="contact">
     <p>Phone: <a href="tel:+40755010540">+40 755 010 540</a></p>
     <p>
@@ -9,6 +19,7 @@
       >
     </p>
     <p>
+      <div class="container-harta">
       <iframe
         src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3160.4809271726594!2d26.0995867!3d44.4355355!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40b1ff472f47f047%3A0x493984726f0235f9!2sFacultatea%20de%20Matematic%C4%83%20%C8%99i%20Informatic%C4%83!5e1!3m2!1sro!2sro!4v1740959012192!5m2!1sro!2sro"
         width="100%"
@@ -17,6 +28,7 @@
         loading="lazy"
         referrerpolicy="no-referrer-when-downgrade"
       ></iframe>
+      </div>
     </p>
     <p>Email: <a href="mailto:contact@autoxv.ro">contact@autoxv.ro</a></p>
     <p>Chat: <a href="https://wa.me/0755010540">WhatsApp</a></p>
